cfm-1x1-vqfx-8srv-mcloud/k8s-examples/ingress/all-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: all
spec:
  backend:
    serviceName: nginx
    servicePort: 80
  rules:
  - host: www.juniper.net
    http:
      paths:
      - path: /dev
        backend:
          serviceName: nginx
          servicePort: 80
  - host: www.google.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
