cfm-1x1-vqfx-8srv-mcloud/k8s-examples/ingress/simple-fanout-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-fanout
spec:
  rules:
  - host: www.juniper.net
    http:
      paths:
      - path: /dev
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /qa
        backend:
          serviceName: nginx
          servicePort: 80
