cfm-1x1-vqfx-8srv-mcloud/k8s-examples/ingress/single-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: single-service
spec:
  backend:
    serviceName: nginx
    servicePort: 80
