cfm-1x1-vqfx-8srv-mcloud/k8s-examples/ingress/virtual-host-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: virutal-host
spec:
  rules:
  - host: www.google.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
  - host: www.yahoo.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
